# SparkWriter

./: .gitignore  LICENSE  NOTIFICATIONS_API.md  README.md  pyproject.toml  spark-writer.desktop
debian/: changelog  control  postinst  postrm  rules
debian/spark-writer/DEBIAN/: control  md5sums  postinst  postrm  prerm
docs/: Receipts.md  SPARKWRITER_MANIFEST_AUTHORING.md
scripts/: build-deb.sh
src/spark_writer/: app.py  cli.py  entrypoint.py  profile.py  receipts.py  return_delivery.py  window.py
src/spark_writer/builders/: __init__.py  runner.py
src/spark_writer/builders/proxmox/: Containerfile  builder.py
src/spark_writer/core/: download_engine.py  downloader.py  iso_utils.py  verified_image.py  writer.py
src/spark_writer/plugins/: action_context.py  base.py  forms.py  installer_schemes.py  json_plugin.py  json_plugin_approvals.py  json_plugin_presets.py  manager.py  manifest_assets.py  manifest_download.py  manifest_schema.py  plugin_install.py  signing.py  standard_fields.py  template_engine.py  trust.py
src/spark_writer/sources/: __init__.py  catalog.py
src/usb_writer_core/: __init__.py  models.py  preflight.py  progress.py  writer.py
src/usb_writer_core/notifications/: notifier.py  pipeline.py
tests/: conftest.py  proxmox-tailscale.firstboot.sh  test_builders.py  test_cli.py  test_download_engine.py  test_manifest_approval.py  test_manifest_assets.py  test_manifest_download.py  test_manifest_integration.py  test_manifest_signing.py  test_notifications.py  test_pipeline_notifier.py  test_plugin_install.py  test_preflight.py  test_profile.py  test_receipts.py  test_return_delivery.py  test_sessions.py  test_sources.py  test_template_engine.py  test_verified_image.py  test_writer_subprocess.py
(+29 files in other folders)
