[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-writer"
version = "0.1.16"
description = "GTK4 frontend for Spark Writer"
authors = [{name = "J. Weber", email = "weber.jesse@gmail.com"}]
dependencies = [
    "requests",
    "libtorrent",
    "pynacl",
    "jinja2",
]
requires-python = ">=3.10"

[project.scripts]
spark-writer = "spark_writer.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spark_writer = ["plugins/installed/*.json", "plugins/installed/*.sh", "plugins/schema/*.json"]
