[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-writer"
version = "0.1.22"
description = "GTK4 frontend for Spark Writer"
authors = [{name = "J. Weber", email = "weber.jesse@gmail.com"}]
dependencies = [
    "jsonschema",
    "requests",
    "libtorrent",
    "pynacl",
]
requires-python = ">=3.10"

[project.scripts]
spark-writer = "spark_writer.entrypoint:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spark_writer = ["plugins/installed/*.json", "plugins/installed/*.sh", "plugins/schema/*.json"]
